test/Eval/binary-ops-overflow.src
// V %srcc --sema --verify %s
program test;

// TODO: Test more operations.

eval 1 << 63;      // expected-error: Arithmetic error: '<<': integer overflow
eval 1 <<< 64;     // expected-error: Arithmetic error: '<<<': shift amount exceeds bit width
eval 1 <<< 111111; // expected-error: Arithmetic error: '<<<': shift amount exceeds bit width

eval (1 <<< 63) - 1; // expected-error: Arithmetic error: '-': integer overflow
eval -(1 <<< 63)   ; // expected-error: Arithmetic error: '-': integer overflow

// The source locations for these are in the preamble.
eval 100 ** 100;   // expected-error@*: Arithmetic error: '*': integer overflow
eval 0 ** -1;      // expected-error@*: Assertion failed: 'exp >= 0': attempting to raise 0 to a negative power
eval 0 ** -100;    // expected-error@*: Assertion failed: 'exp >= 0': attempting to raise 0 to a negative power
